test/shouldFail/expr/timesStrInt.pas
program Sample;
var
  i : string;

begin
  i := 'aa' * 3;
//     ^^^^^^^^
// Operator '*' cannot be applied to string and integer
end.
